<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/toolbar"
        android:layout_width="800dp"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="513dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logo_sharel"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/pattaya"
        android:text="@string/logo_sharel"
        android:textAppearance="@style/logo_sharelove"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/crea_tu_Cuenta"
        android:layout_width="320dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="39dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/crea_tu_cuenta"
        android:textAppearance="@style/crea_tu_cuenta"
        android:translationY="-0.59sp" />

    <EditText
        android:id="@+id/correoElectronico"
        android:layout_width="580dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shadow_1"
        android:gravity="center_vertical"
        android:hint="@string/correotext"
        android:lineSpacingExtra="2sp"
        android:textAppearance="@style/correoelctronicotext"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/inputCorreo"
        android:layout_width="580dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shadow_1"
        android:gravity="center_vertical"
        android:hint="@string/correo"
        android:lineSpacingExtra="2sp"
        android:textAppearance="@style/text"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/InputPass"
        android:layout_width="580dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shadow_1"
        android:gravity="center_vertical"
        android:hint="@string/contraseña"
        android:lineSpacingExtra="2sp"
        android:textAppearance="@style/text"
        tools:ignore="Autofill,TextFields" />
    <EditText
        android:id="@+id/telefonoUser"
        android:layout_width="580dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shadow_1"
        android:gravity="center_vertical"
        android:hint="@string/Telefonotext"
        android:lineSpacingExtra="2sp"
        android:textAppearance="@style/telefonotext"
        tools:ignore="Autofill,TextFields" />
    <EditText
        android:id="@+id/fechaNacimiento"
        android:layout_width="580dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shadow_1"
        android:gravity="center_vertical"
        android:hint="@string/dd_mm_yyyy"
        android:lineSpacingExtra="2sp"
        android:textAppearance="@style/dd_mm_yyyy"
        tools:ignore="Autofill,TextFields" />
    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="509dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/boton"
        android:lineSpacingExtra="1sp"
        android:text="@string/botontextcrearcuenta"
        android:textAppearance="@style/botonCrearCuentatext"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/frase_cuenta"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="589dp"
        android:layout_marginEnd="120dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/ya_tienes_una_cuenta"
        android:textAppearance="@style/ya_tienes_una_cuenta"
        android:translationY="-0.69sp"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>